--- a/index.html
+++ b/index.html
@@ -22,45 +22,73 @@
             nom, prenom : Chaine de caracteres <br>
             valeurs : Boleen  <br> <br>
             <b>Debut</b> <br>
-             A ← 2 <br>
-             nbr ← 5 <br>
-             C ← nbr󠀥󠀥󠀥%A <br>
-             nom ← 'Koffi' <br>
-             prenom ← 'Justin' <br>
-             valeurs ← (faux) <br>
+             A &#8592; 2 <br>
+             nbr &#8592; 5 <br>
+             C &#8592; nbr󠀥󠀥󠀥%A <br>
+             nom &#8592; &apos;Koffi&apos; <br>
+             prenom &#8592; &apos;Justin&apos;<br>
+             valeurs &#8592; (faux) <br>
              <b>Fin</b>
                           
         </p><hr>
         <h2> Exercice 1.1</h2>
          <p><b>Resultat</b> <br> <br>
-            A vaut 3 <br>
-            B vaut 4 
+            <b>Variables</b><br>
+            A,B : Entier <br> <br>
+            <b>Debut</b> <br>
+            A ← 1 (A = 1)<br>
+            B ← A + 3 (B = 4)<br>
+            A ← 3      (A = 3) <br>
+            <b>Fin</b>
         </p><hr>
         <h2>Exercice 1.2</h2>
         <p>
             <b>Resultat</b><br><br>
-            A vaut 2 <br>
-            B vaut 3 <br>
-            C vaut 1 <br>
+            <b>Variales</b> <br>
+            A, B, C : Entier <br><br>
+            <b>Debut</b> <br>
+            A ← 5  (A = 5)<br>
+            B ← 3 (B = 3)<br>
+            C ← A + B  (C = 8)<br>
+            A ← 2   (A = 2)<br>
+            C ← B - A (C = 1)<br>
+            <b>Fin</b>
         </p><hr>
         <h2>Exercice 1.3</h2>
         <p>
             <b>Resultat</b><br><br>
-            A vaut 6 <br>
-            B vaut 2 
+            <b>Variables</b> <br>
+            A, B : Entier <br><br>
+            <b>Debut</b><br>
+            A ← 5 (A = 5) <br>
+            B ← A + 4 (B = 9) <br>
+            A ← A + 1 (A = 6)  <br>
+            B ← A - 4 (B = 2)  <br>
         </p><hr>
         <h2>Exercice 1.4</h2>
         <p>
             <b>Resultat</b> <br><br>
-            A vaut 13 <br>
-            B vaut 13 <br>
-            C vaut 13 
+            <b>Variables</b><br>
+            A, B, C : Entier <br><br>
+            <b>Debut</b> <br>
+            A ← 3 (A = 3)<br>
+            B ← 10 (B = 10)<br>
+            C ← A + B (C = 13)<br>
+            B ← A + B (B = 13)<br>
+            A ← C (A = 13)<br>
+            <b>fin</b>
         </p><hr>
         <h2>Exercice 1.5</h2>
         <p>
             <b>Resultat</b> <br><br>
-            A vaut 2 <br>
-            B vaut 2 <br>
+            <b>Variables</b><br>
+            A, B : Entier <br><br>
+            <b>Debut</b><br>
+            A ← 5   (A = 5)<br>
+            B ← 2  (B = 2)<br>
+            A ← B (A = 2)<br>
+            B ← A (B = 2)<br>
+            <b>Fin</b>
         </p><hr>
         <h2>Exercice 1.6</h2>
         <p><b>Resultat</b></p>
@@ -69,10 +97,10 @@
             <b>Variables</b>  <br>
             A, B : Entier <br><br>
             <b>Debut</b> <br>
-             A ← 2 <br>
-             B ← 5 <br>
-             A ← B <br>
-             B ← A <br>
+             A ← 2 (A = 2)<br>
+             B ← 5 (B = 5)<br>
+             A ← B (A = 5)<br>
+             B ← A − 3 (B = 2)<br>
              <b>Fin</b>
         </p> <hr>
         <h2>Exercice 1.7</h2>
@@ -81,12 +109,10 @@
             <b>Variables</b>  <br>
             A, B, C : Entier <br><br>
             <b>Debut</b> <br>
-             A ← 2 <br>
-             B ← 5 <br>
-             C ← 8 <br>
-             B ← A <br>
-             C ← B <br>
-             A ← C <br>
+             A ← 2 (A = 2)<br>
+             B ← A (B = 2)<br>
+             C ← B (C = 2)<br>
+             A ← C (A = 2)<br>
              <b>Fin</b>
         </p>
 
