--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h2>Exercice 1</h2>
-    <p>
+        <h3><a href="Exo_Algo2.html">Exo d'Algo II ici</a>  </h3>
+        <h4>Exercice 1</h4>
+    <p id="haut-pg">
         <i> Dans un algorithme declarez des variables de types entier, booleen, chaine de caractere affectez leur des valeurs.</i> 
     </p> 
         <p><b>Resultat</b></p>
@@ -31,7 +32,7 @@
              <b>Fin</b>
                           
         </p><hr>
-        <h2> Exercice 1.1</h2>
+        <h4> Exercice 1.1</h4>
          <p><b>Resultat</b> <br> <br>
             <b>Variables</b><br>
             A,B : Entier <br> <br>
@@ -41,7 +42,7 @@
             A ← 3      (A = 3) <br>
             <b>Fin</b>
         </p><hr>
-        <h2>Exercice 1.2</h2>
+        <h4>Exercice 1.2</h4>
         <p>
             <b>Resultat</b><br><br>
             <b>Variales</b> <br>
@@ -54,7 +55,7 @@
             C ← B - A (C = 1)<br>
             <b>Fin</b>
         </p><hr>
-        <h2>Exercice 1.3</h2>
+        <h4>Exercice 1.3</h4>
         <p>
             <b>Resultat</b><br><br>
             <b>Variables</b> <br>
@@ -65,7 +66,7 @@
             A ← A + 1 (A = 6)  <br>
             B ← A - 4 (B = 2)  <br>
         </p><hr>
-        <h2>Exercice 1.4</h2>
+        <h4>Exercice 1.4</h4>
         <p>
             <b>Resultat</b> <br><br>
             <b>Variables</b><br>
@@ -78,7 +79,7 @@
             A ← C (A = 13)<br>
             <b>fin</b>
         </p><hr>
-        <h2>Exercice 1.5</h2>
+        <h4>Exercice 1.5</h4>
         <p>
             <b>Resultat</b> <br><br>
             <b>Variables</b><br>
@@ -90,7 +91,7 @@
             B ← A (B = 2)<br>
             <b>Fin</b>
         </p><hr>
-        <h2>Exercice 1.6</h2>
+        <h4>Exercice 1.6</h4>
         <p><b>Resultat</b></p>
         <p> 
             <b>Algorithme Exercice6 </b> <br><br>
@@ -103,19 +104,18 @@
              B ← A − 3 (B = 2)<br>
              <b>Fin</b>
         </p> <hr>
-        <h2>Exercice 1.7</h2>
+        <h4>Exercice 1.7</h4>
         <p> 
             <b>Algorithme Exercice7 </b> <br><br>
             <b>Variables</b>  <br>
             A, B, C : Entier <br><br>
             <b>Debut</b> <br>
-             A ← 2 (A = 2)<br>
-             B ← A (B = 2)<br>
-             C ← B (C = 2)<br>
-             A ← C (A = 2)<br>
+             C ← A  <br>
+             A ← B <br>
+             B ← C <br>
              <b>Fin</b>
         </p>
-
+        <p>Haut de <a href="#haut-pg">la page</a></p>
     </div>
 </body>
 </html>
