--- a/Exo_Algo2.html
+++ b/Exo_Algo2.html
@@ -49,7 +49,7 @@
        n, N : Entier <br><br>
        <b>Debut</b> <br>
        Ecrire('Entrez un nombre:')<br>
-       lire n <br>
+       Lire n <br>
        N ← n^2 <br>
        Ecrire('le carre de', n, 'est:', N)<br>
        <b>fin</b>
@@ -62,9 +62,9 @@
        TVA, prixTTC : Reel<br>
        <b>Debut</b><br>
        Ecrire('Entrez le prix de l''article:')  <br>
-       lire prixHT <br>
+       Lire prixHT <br>
        Ecrire('Entrez le nombre d''articles que vous desiriez:') <br>
-       lire nbr <br>
+       Lire nbr <br>
        TVA ← 46/100  <br>
        prixTTC ← nbr*prixHT*TVA<br>
        Ecrire('Votre article coute:', prixTTC)
@@ -77,7 +77,7 @@
        n : Reel <br><br>
        <b>Debut</b> <br>
         Ecrire('Entrez un nombre svp') <br>
-        lire n<br>
+        Lire n<br>
         si (n < 0) alors<br>
         Ecrire(n, 'est un nombre negatif') sinon<br>
         Ecrire(n, 'est un nombre positif')<br>
