modification exo algo 2

--- a/Exo_Algo2.html
+++ b/Exo_Algo2.html
@@ -67,7 +67,7 @@
        Lire nbr <br>
        TVA ← 46/100  <br>
        prixTTC ← nbr*prixHT*TVA<br>
-       Ecrire('Votre article coute:', prixTTC)
+       Ecrire('Votre article coute:', prixTTC) <br>
        <b>Fin</b>
    </p><hr>
    <h4>Exercice 3.1</h4>
