--- a/Exo_Algo2.html
+++ b/Exo_Algo2.html
@@ -1,90 +1,101 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Exo d'Algo II</title>
-</head>
-<body>
-<div class="container">
-    <h3>Exo d'Algo II</h3>
-    <h4> Exercice 1.8</h4>
-    <p><b>Resultat</b> <br> <br>
-       <b>Variables</b><br>
-       A,B,C : Chaine de caracteres <br> <br>
-       <b>Debut</b> <br>
-       A ← "423" (A ="423")<br>
-       B ← "12" (B ="12")<br>
-       C ← A + B  (C indefini) <br>
-       <b>Fin</b>
-   </p><hr>
-   <h4>Exercice 1.9</h4>
-   <p>
-       <b>Resultat</b><br><br>
-       <b>Variales</b> <br>
-       A, B, C : Chaine de caracteres <br><br>
-       <b>Debut</b> <br>
-       A ← "423"  (A ="423")<br>
-       B ← "12" (B ="12")<br>
-       C ← A & B  (C ="42312")<br>
-       <b>Fin</b>
-   </p><hr>
-   <h4>Exercice 2.1</h4>
-   <p>
-       <b>Resultat</b><br><br>
-       <b>Variables</b> <br>
-       val, Double : Entier <br><br>
-       <b>Debut</b><br>
-    val ← 231  <br>
-       Double ← val*2  <br>
-       Ecrire val (val = 231)  <br>
-       Ecrire Double   (Double = 462) <br>
-   </p><hr>
-   <h4>Exercice 2.2</h4>
-   <p>
-       <b>Resultat</b> <br><br>
-       <b>Variables</b><br>
-       n, N : Entier <br><br>
-       <b>Debut</b> <br>
-       Ecrire('Entrez un nombre:')<br>
-       Lire n <br>
-       N ← n^2 <br>
-       Ecrire('le carre de', n, 'est:', N)<br>
-       <b>fin</b>
-   </p><hr>
-   <h4>Exercice 2.3</h4>
-   <p>
-       <b>Resultat</b> <br><br>
-       <b>Variables</b><br>
-       prixHT, nbr : Entier <br>
-       TVA, prixTTC : Reel<br>
-       <b>Debut</b><br>
-       Ecrire('Entrez le prix de l''article:')  <br>
-       Lire prixHT <br>
-       Ecrire('Entrez le nombre d''articles que vous desiriez:') <br>
-       Lire nbr <br>
-       TVA ← 46/100  <br>
-       prixTTC ← nbr*prixHT*TVA<br>
-       Ecrire('Votre article coute:', prixTTC) <br>
-       <b>Fin</b>
-   </p><hr>
-   <h4>Exercice 3.1</h4>
-   <p><b>Resultat</b></p>
-   <p> 
-       <b>Variables</b>  <br>
-       n : Reel <br><br>
-       <b>Debut</b> <br>
-        Ecrire('Entrez un nombre svp') <br>
-        Lire n<br>
-        si (n < 0) alors<br>
-        Ecrire(n, 'est un nombre negatif') sinon<br>
-        Ecrire(n, 'est un nombre positif')<br>
-        <b>Finsi</b><br>
+  </head>
+  <body>
+    <div class="container">
+      <p class="link">
+        Exo Algo III a la <a href="Exo_Alogo3.html">page suivante</a>
+      </p>
+      <h3>Exo d'Algo II</h3>
+      <h4>Exercice 1.8</h4>
+      <p>
+        <b>Resultat</b> <br />
+        <br />
+        <b>Variables</b><br />
+        A,B,C : Chaine de caracteres <br />
+        <br />
+        <b>Debut</b> <br />
+        A ← "423" (A ="423")<br />
+        B ← "12" (B ="12")<br />
+        C ← A + B (C indefini) <br />
         <b>Fin</b>
-   </p> <hr>
-
-</div>
-</body>
+      </p>
+      <hr />
+      <h4>Exercice 1.9</h4>
+      <p>
+        <b>Resultat</b><br /><br />
+        <b>Variales</b> <br />
+        A, B, C : Chaine de caracteres <br /><br />
+        <b>Debut</b> <br />
+        A ← "423" (A ="423")<br />
+        B ← "12" (B ="12")<br />
+        C ← A & B (C ="42312")<br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 2.1</h4>
+      <p>
+        <b>Resultat</b><br /><br />
+        <b>Variables</b> <br />
+        val, Double : Entier <br /><br />
+        <b>Debut</b><br />
+        val ← 231 <br />
+        Double ← val*2 <br />
+        Ecrire val (val = 231) <br />
+        Ecrire Double (Double = 462) <br />
+      </p>
+      <hr />
+      <h4>Exercice 2.2</h4>
+      <p>
+        <b>Resultat</b> <br /><br />
+        <b>Variables</b><br />
+        n, N : Entier <br /><br />
+        <b>Debut</b> <br />
+        Ecrire('Entrez un nombre:')<br />
+        Lire n <br />
+        N ← n^2 <br />
+        Ecrire('le carre de', n, 'est:', N)<br />
+        <b>fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 2.3</h4>
+      <p>
+        <b>Resultat</b> <br /><br />
+        <b>Variables</b><br />
+        prixHT, nbr : Entier <br />
+        TVA, prixTTC : Reel<br />
+        <b>Debut</b><br />
+        Ecrire('Entrez le prix de l''article:') <br />
+        Lire prixHT <br />
+        Ecrire('Entrez le nombre d''articles que vous desiriez:') <br />
+        Lire nbr <br />
+        TVA ← 46/100 <br />
+        prixTTC ← nbr*prixHT*TVA<br />
+        Ecrire('Votre article coute:', prixTTC) <br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 3.1</h4>
+      <p><b>Resultat</b></p>
+      <p>
+        <b>Variables</b> <br />
+        n : Reel <br /><br />
+        <b>Debut</b> <br />
+        Ecrire('Entrez un nombre svp') <br />
+        Lire n<br />
+        si (n < 0) alors<br />
+        Ecrire(n, 'est un nombre negatif') sinon<br />
+        Ecrire(n, 'est un nombre positif')<br />
+        <b>Finsi</b><br />
+        <b>Fin</b>
+      </p>
+      <hr />
+    </div>
+  </body>
 </html>
