--- a/index.html
+++ b/index.html
@@ -1,121 +1,136 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Exercice D'algo</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h3><a href="Exo_Algo2.html">Exo d'Algo II ici</a>  </h3>
-        <h4>Exercice 1</h4>
-    <p id="haut-pg">
-        <i> Dans un algorithme declarez des variables de types entier, booleen, chaine de caractere affectez leur des valeurs.</i> 
-    </p> 
-        <p><b>Resultat</b></p>
-        <p> 
-            <b>Algorithme Exercice1 </b> <br><br>
-            <b>Variables</b>  <br>
-            A, nbr : Entier <br>
-            C, result : Reel   <br>
-            nom, prenom : Chaine de caracteres <br>
-            valeurs : Boleen  <br> <br>
-            <b>Debut</b> <br>
-             A &#8592; 2 <br>
-             nbr &#8592; 5 <br>
-             C &#8592; nbr󠀥󠀥󠀥%A <br>
-             nom &#8592; &apos;Koffi&apos; <br>
-             prenom &#8592; &apos;Justin&apos;<br>
-             valeurs &#8592; (faux) <br>
-             <b>Fin</b>
-                          
-        </p><hr>
-        <h4> Exercice 1.1</h4>
-         <p><b>Resultat</b> <br> <br>
-            <b>Variables</b><br>
-            A,B : Entier <br> <br>
-            <b>Debut</b> <br>
-            A ← 1 (A = 1)<br>
-            B ← A + 3 (B = 4)<br>
-            A ← 3      (A = 3) <br>
-            <b>Fin</b>
-        </p><hr>
-        <h4>Exercice 1.2</h4>
-        <p>
-            <b>Resultat</b><br><br>
-            <b>Variales</b> <br>
-            A, B, C : Entier <br><br>
-            <b>Debut</b> <br>
-            A ← 5  (A = 5)<br>
-            B ← 3 (B = 3)<br>
-            C ← A + B  (C = 8)<br>
-            A ← 2   (A = 2)<br>
-            C ← B - A (C = 1)<br>
-            <b>Fin</b>
-        </p><hr>
-        <h4>Exercice 1.3</h4>
-        <p>
-            <b>Resultat</b><br><br>
-            <b>Variables</b> <br>
-            A, B : Entier <br><br>
-            <b>Debut</b><br>
-            A ← 5 (A = 5) <br>
-            B ← A + 4 (B = 9) <br>
-            A ← A + 1 (A = 6)  <br>
-            B ← A - 4 (B = 2)  <br>
-        </p><hr>
-        <h4>Exercice 1.4</h4>
-        <p>
-            <b>Resultat</b> <br><br>
-            <b>Variables</b><br>
-            A, B, C : Entier <br><br>
-            <b>Debut</b> <br>
-            A ← 3 (A = 3)<br>
-            B ← 10 (B = 10)<br>
-            C ← A + B (C = 13)<br>
-            B ← A + B (B = 13)<br>
-            A ← C (A = 13)<br>
-            <b>fin</b>
-        </p><hr>
-        <h4>Exercice 1.5</h4>
-        <p>
-            <b>Resultat</b> <br><br>
-            <b>Variables</b><br>
-            A, B : Entier <br><br>
-            <b>Debut</b><br>
-            A ← 5   (A = 5)<br>
-            B ← 2  (B = 2)<br>
-            A ← B (A = 2)<br>
-            B ← A (B = 2)<br>
-            <b>Fin</b>
-        </p><hr>
-        <h4>Exercice 1.6</h4>
-        <p><b>Resultat</b></p>
-        <p> 
-            <b>Algorithme Exercice6 </b> <br><br>
-            <b>Variables</b>  <br>
-            A, B : Entier <br><br>
-            <b>Debut</b> <br>
-             A ← 2 (A = 2)<br>
-             B ← 5 (B = 5)<br>
-             A ← B (A = 5)<br>
-             B ← A − 3 (B = 2)<br>
-             <b>Fin</b>
-        </p> <hr>
-        <h4>Exercice 1.7</h4>
-        <p> 
-            <b>Algorithme Exercice7 </b> <br><br>
-            <b>Variables</b>  <br>
-            A, B, C : Entier <br><br>
-            <b>Debut</b> <br>
-             C ← A  <br>
-             A ← B <br>
-             B ← C <br>
-             <b>Fin</b>
-        </p>
-        <p>Haut de <a href="#haut-pg">la page</a></p>
+      <p class="link">
+        Exo Algo II a la <a href="Exo_Algo2.html">page suivante</a>
+      </p>
+      <h4>Exercice 1</h4>
+      <p id="haut-pg">
+        <i>
+          Dans un algorithme declarez des variables de types entier, booleen,
+          chaine de caractere affectez leur des valeurs.</i
+        >
+      </p>
+      <p><b>Resultat</b></p>
+      <p>
+        <b>Algorithme Exercice1 </b> <br /><br />
+        <b>Variables</b> <br />
+        A, nbr : Entier <br />
+        C, result : Reel <br />
+        nom, prenom : Chaine de caracteres <br />
+        valeurs : Boleen <br />
+        <br />
+        <b>Debut</b> <br />
+        A &#8592; 2 <br />
+        nbr &#8592; 5 <br />
+        C &#8592; nbr󠀥󠀥󠀥%A <br />
+        nom &#8592; &apos;Koffi&apos; <br />
+        prenom &#8592; &apos;Justin&apos;<br />
+        valeurs &#8592; (faux) <br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.1</h4>
+      <p>
+        <b>Resultat</b> <br />
+        <br />
+        <b>Variables</b><br />
+        A,B : Entier <br />
+        <br />
+        <b>Debut</b> <br />
+        A ← 1 (A = 1)<br />
+        B ← A + 3 (B = 4)<br />
+        A ← 3 (A = 3) <br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.2</h4>
+      <p>
+        <b>Resultat</b><br /><br />
+        <b>Variales</b> <br />
+        A, B, C : Entier <br /><br />
+        <b>Debut</b> <br />
+        A ← 5 (A = 5)<br />
+        B ← 3 (B = 3)<br />
+        C ← A + B (C = 8)<br />
+        A ← 2 (A = 2)<br />
+        C ← B - A (C = 1)<br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.3</h4>
+      <p>
+        <b>Resultat</b><br /><br />
+        <b>Variables</b> <br />
+        A, B : Entier <br /><br />
+        <b>Debut</b><br />
+        A ← 5 (A = 5) <br />
+        B ← A + 4 (B = 9) <br />
+        A ← A + 1 (A = 6) <br />
+        B ← A - 4 (B = 2) <br />
+      </p>
+      <hr />
+      <h4>Exercice 1.4</h4>
+      <p>
+        <b>Resultat</b> <br /><br />
+        <b>Variables</b><br />
+        A, B, C : Entier <br /><br />
+        <b>Debut</b> <br />
+        A ← 3 (A = 3)<br />
+        B ← 10 (B = 10)<br />
+        C ← A + B (C = 13)<br />
+        B ← A + B (B = 13)<br />
+        A ← C (A = 13)<br />
+        <b>fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.5</h4>
+      <p>
+        <b>Resultat</b> <br /><br />
+        <b>Variables</b><br />
+        A, B : Entier <br /><br />
+        <b>Debut</b><br />
+        A ← 5 (A = 5)<br />
+        B ← 2 (B = 2)<br />
+        A ← B (A = 2)<br />
+        B ← A (B = 2)<br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.6</h4>
+      <p><b>Resultat</b></p>
+      <p>
+        <b>Algorithme Exercice6 </b> <br /><br />
+        <b>Variables</b> <br />
+        A, B : Entier <br /><br />
+        <b>Debut</b> <br />
+        A ← 2 (A = 2)<br />
+        B ← 5 (B = 5)<br />
+        A ← B (A = 5)<br />
+        B ← A − 3 (B = 2)<br />
+        <b>Fin</b>
+      </p>
+      <hr />
+      <h4>Exercice 1.7</h4>
+      <p>
+        <b>Algorithme Exercice7 </b> <br /><br />
+        <b>Variables</b> <br />
+        A, B, C : Entier <br /><br />
+        <b>Debut</b> <br />
+        C ← A <br />
+        A ← B <br />
+        B ← C <br />
+        <b>Fin</b>
+      </p>
+      <p>Haut de <a href="#haut-pg">la page</a></p>
     </div>
-</body>
+  </body>
 </html>
