--- a/Exo_Alogo3.html
+++ b/Exo_Alogo3.html
@@ -109,8 +109,8 @@
         <b>Sinon</b> <br />
         Ecrire 'Veuillez entrer le motdepasse: ' <br />
         Lire motdepasse
-        <b>Si</b> (longeur(motdepasse) > 8) <b>Alors</b> <br />` Ecrire 'Votre
-        mot de passe doit comporter 8 caracteres' <br />
+        <b>Si</b> (longeur(motdepasse) > 8) <b>Alors</b> <br />
+        Ecrire 'Votre mot de passe doit comporter 8 caracteres' <br />
         <b>Sinon</b> <br />
         Ecrire 'Vos information on ete bien enregistrer' <br />
         <b>Finsi</b> <br />
